--- a/templates/index.html
+++ b/templates/index.html
@@ -491,5 +491,10 @@
             thoughtBox.classList.toggle('expanded', !wasCollapsed);
         }
     </script>
+    <footer>
+    <p>© 2025 Jothest2pid | <a href="https://github.com/Jothest2pid/jos-reinvented-wheel-ui">Source Code</a></p>
+    <p>Licensed under <a href="https://www.gnu.org/licenses/agpl-3.0.html">AGPL-3.0</a></p>
+</footer>
+
 </body>
 </html>
